[tool.poetry]
name = "meme_maker"
version = "0.1.0"
description = ""
authors = ["Ryan Townshend <citizen.townshend@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Pillow = "^8.2.0"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
memer = "meme_maker.meme_maker:main"